--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -72,6 +72,7 @@ $log-font-size: 0.85rem;
 /* 📂 카테고리 영역 */
 .categoryView {
   width: $category-width;
+  flex-shrink: 0;
   background-color: #787878;
   font-size: $category-font-size;
   transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
