--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -1,14 +1,15 @@
-$category-width: 200px;
-$category-font-size: 0.9rem;
 
 /* 📂 카테고리 영역 */
 .categoryView {
-  width: $category-width;
+  width: 200px;
   flex-shrink: 0;
-  background-color: #787878;
-  font-size: $category-font-size;
+  background-color: #5c5c5c;
+  font-size: 0.9rem;
   transition: transform 0.3s ease-in-out, width 0.3s ease-in-out;
   overflow-y: auto;
+  padding: 10px;
+  color: #fff;
+  height: 100%;
 }
 
 /* 📌 카테고리 숨김 처리 */
@@ -20,5 +21,34 @@ $category-font-size: 0.9rem;
 
 /* 📌 카테고리 표시 */
 .categoryView.show {
-  width: $category-width;
+  width: 200px;
+}
+
+.categoryTree {
+  list-style: none;
+  padding: 0;
+}
+
+.treeItem {
+  cursor: pointer;
+  margin: 5px 0;
+  transition: color 0.2s;
+
+  &:hover {
+    color: #ff9800;
+  }
+
+  span {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+}
+
+.folder {
+  color: #ffffff;
+}
+
+.file {
+  color: rgba(114, 204, 238, 0.78);
 }
