--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,6 +1,3 @@
-$log-height: 150px;
-$content-font-size: 0.85rem;
-
 /* 🌟 전체 레이아웃 */
 .home {
   display: flex;
@@ -8,7 +5,6 @@ $content-font-size: 0.85rem;
   height: 100vh;
   justify-content: stretch;
 }
-
 
 /* 📌 메인 컨텐츠 영역 */
 .page {
@@ -21,7 +17,7 @@ $content-font-size: 0.85rem;
 .subPage {
   display: flex;
   flex-grow: 1;
-  height: calc(100vh - $log-height);
+  height: calc(100vh - 150px);
   overflow: hidden;
 }
 
@@ -34,7 +30,13 @@ $content-font-size: 0.85rem;
   background: #282c34;
   color: #abb2bf;
   padding: 1rem;
-  font-size: $content-font-size;
+  font-size: 0.85rem;
   white-space: pre-wrap;
   word-break: break-word;
+}
+
+.highlight {
+  background-color: yellow;
+  color: black;
+  font-weight: bold;
 }
