--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -2,12 +2,13 @@
 .categoryView {
   width: 200px;
   flex-shrink: 0;
-  background-color: #5c5c5c;
+  background-color: #323232;
   font-size: 0.9rem;
   overflow-y: auto;
   padding: 10px;
   color: #fff;
   height: 100%;
+  border-right: 1px solid #000;
 }
 
 .categoryTree {
