--- a/src/components/NavigationView/NavigationView.module.scss
+++ b/src/components/NavigationView/NavigationView.module.scss
@@ -1,4 +1,3 @@
-$nav-width: 50px;
 $nav-font-size: 1rem;
 
 /* 📌 내비게이션 영역 */
@@ -6,11 +5,12 @@ $nav-font-size: 1rem;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  width: $nav-width;
-  background-color: #454545;
+  width: 50px;
+  background-color: #323232;
   align-items: center;
   justify-content: flex-start;
   padding: 10px 0;
+  border-right: 1px solid #000;
 }
 
 /* 📌 내비게이션 버튼 컨테이너 */
@@ -35,5 +35,11 @@ $nav-font-size: 1rem;
   &:hover {
     background: #4e5254;
     transform: scale(1.1);
+  }
+
+  /* SVG 크기 조절 */
+  svg {
+    width: 18px;
+    height: 18px;
   }
 }
