--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100vh;
   justify-content: stretch;
+  overflow: hidden;
 }
 
 /* 📌 메인 컨텐츠 영역 */
@@ -11,6 +12,7 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  overflow: hidden;
 }
 
 /* 📌 서브 페이지 (카테고리 + 컨텐츠) */
