--- a/src/components/NavigationView/NavigationView.module.scss
+++ b/src/components/NavigationView/NavigationView.module.scss
@@ -9,7 +9,7 @@ $nav-font-size: 1rem;
   background-color: #323232;
   align-items: center;
   justify-content: flex-start;
-  padding: 10px 0;
+  padding: 10px 10px;
   border-right: 1px solid #000;
 }
 
@@ -18,6 +18,7 @@ $nav-font-size: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
 }
 
 /* 📌 개별 버튼 스타일 */
@@ -27,12 +28,17 @@ $nav-font-size: 1rem;
   color: #a9b7c6;
   font-size: $nav-font-size;
   cursor: pointer;
-  padding: 3px;
+  padding: 2px;
   border-radius: 5px;
-  transition: background 0.2s, transform 0.2s;
+  transition: background 0.4s, transform 0.4s;
 
   &:hover {
-    background: #4e5254;
+    background-color: rgba(255, 255, 255, 0.1); // 마우스 오버 시 색상 강조
+    transform: scale(1.1);
+  }
+
+  &.active {
+    background-color: rgba(255, 255, 255, 0.2); // 열린 상태 유지
     transform: scale(1.1);
   }
 
