반응형 처리 준비..

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,4 +1,4 @@
-/* 🌟 전체 레이아웃 */
+/* 전체 레이아웃 */
 .home {
   display: flex;
   width: 100%;
@@ -7,7 +7,7 @@
   overflow: hidden;
 }
 
-/* 📌 메인 컨텐츠 영역 */
+/* 메인 컨텐츠 영역 */
 .page {
   display: flex;
   flex-grow: 1;
@@ -15,7 +15,7 @@
   overflow: hidden;
 }
 
-/* 📌 서브 페이지 (카테고리 + 컨텐츠) */
+/* 서브 페이지 (카테고리 + 컨텐츠) */
 .subPage {
   display: flex;
   flex-grow: 1;
@@ -23,7 +23,7 @@
   overflow: hidden;
 }
 
-/* 📜 컨텐츠 영역 */
+/* 컨텐츠 영역 */
 .contentsView {
   display: flex;
   flex-grow: 1;
@@ -41,4 +41,44 @@
   background-color: yellow;
   color: black;
   font-weight: bold;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .home {
+  }
+
+  .page {
+  }
+
+  .subPage {
+  }
+
+  .contentsView {
+  }
+
+  .highlight {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .home {
+  }
+
+  .page {
+  }
+
+  .subPage {
+  }
+
+  .contentsView {
+  }
+
+  .highlight {
+  }
 }
