--- a/src/app/post/[slug]/PostHeader.module.scss
+++ b/src/app/post/[slug]/PostHeader.module.scss
@@ -39,3 +39,49 @@
   border-radius: 8px;
   font-size: 12px;
 }
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .postHeader {
+  }
+
+  .title {
+  }
+
+  .description {
+  }
+
+  .meta {
+  }
+
+  .tags {
+  }
+
+  .tag {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .postHeader {
+  }
+
+  .title {
+  }
+
+  .description {
+  }
+
+  .meta {
+  }
+
+  .tags {
+  }
+
+  .tag {
+  }
+}
