--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -1,4 +1,4 @@
-/* 📂 카테고리 영역 */
+/* 카테고리 영역 */
 .categoryView {
   width: 20%;
   min-width: 200px;
@@ -36,9 +36,61 @@
   color: rgba(114, 204, 238, 0.78);
 }
 
-/* 🔍 검색어 하이라이트 */
+/* 검색어 하이라이트 */
 .highlight {
   background-color: rgba(246, 246, 22, 0.93);
   color: black;
   border-radius: 3px;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .categoryView {
+  }
+
+  .categoryTree {
+  }
+
+  .treeItem {
+
+    &:hover {
+    }
+  }
+
+  .folder {
+  }
+
+  .file {
+  }
+
+  .highlight {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .categoryView {
+  }
+
+  .categoryTree {
+  }
+
+  .treeItem {
+
+    &:hover {
+    }
+  }
+
+  .folder {
+  }
+
+  .file {
+  }
+
+  .highlight {
+  }
 }
