--- a/src/components/LogView/LogContainer/LogContainer.module.scss
+++ b/src/components/LogView/LogContainer/LogContainer.module.scss
@@ -1,11 +1,28 @@
-/* ✅ 로그 목록 (스크롤 적용) */
+/* 로그 목록 (스크롤 적용) */
 .logContainer {
   flex-grow: 1;
-  overflow-y: auto; // ✅ 사용자가 자유롭게 스크롤 가능
+  overflow-y: auto;
   background: #222;
   color: #fff;
   padding: 10px;
   font-size: 0.7rem;
   font-family: monospace;
   height: 100%;
+}
+
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .logContainer {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .logContainer {
+  }
 }
