--- a/src/components/LogView/LogView.module.scss
+++ b/src/components/LogView/LogView.module.scss
@@ -1,10 +1,8 @@
-$log-height: 150px;
-
-/* 🖥 로그 전체 영역 */
+/* 로그 전체 영역 */
 .logView {
   display: flex;
   flex-direction: column;
-  height: $log-height;
+  height: 150px;
   background-color: #ccc;
   position: fixed;
   bottom: 0;
@@ -14,7 +12,7 @@ $log-height: 150px;
   border-top: 1px solid #000;
 }
 
-/* ✅ 상단 헤더 (닫기 버튼) - 고정 */
+/* 상단 헤더 (닫기 버튼) - 고정 */
 .logHeader {
   display: flex;
   justify-content: flex-end;
@@ -25,11 +23,39 @@ $log-height: 150px;
   z-index: 10;
 }
 
-/* ✅ 닫기 버튼 */
+/* 닫기 버튼 */
 .closeButton {
   background: none;
   border: none;
   color: white;
   cursor: pointer;
   font-size: 16px;
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .logView {
+  }
+
+  .logHeader {
+  }
+
+  .closeButton {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .logView {
+  }
+
+  .logHeader {
+  }
+
+  .closeButton {
+  }
 }
