--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -1,4 +1,4 @@
-/* 📄 Markdown 스타일 */
+/* Markdown 스타일 */
 .markdown {
   width: 100%;
   max-width: 100%;
@@ -11,7 +11,7 @@
   word-break: break-word;
 }
 
-/* ✅ 제목 스타일 */
+/* 제목 스타일 */
 .markdown h1 {
   font-size: 1.8rem;
   font-weight: bold;
@@ -28,7 +28,7 @@
   padding-bottom: 5px;
 }
 
-/* ✅ 목록 스타일 */
+/* 목록 스타일 */
 .markdown ul {
   padding-left: 20px;
   list-style-type: disc;
@@ -39,7 +39,7 @@
   list-style-type: decimal;
 }
 
-/* ✅ 코드 블록 스타일 */
+/* 코드 블록 스타일 */
 .markdown pre {
   background: #1e1e1e;
   padding: 12px;
@@ -50,7 +50,7 @@
   line-height: 1.5;
 }
 
-/* ✅ 인라인 코드 스타일 (`code`) */
+/* 인라인 코드 스타일 (`code`) */
 .markdown code {
   font-family: "JetBrains Mono", "Fira Code", "Consolas", "Menlo", "monospace";
   background: #3a3f4b;
@@ -58,7 +58,7 @@
   color: #abb2bf;
 }
 
-/* ✅ 코드 블록 내부의 코드 (`pre > code`) */
+/* 코드 블록 내부의 코드 (`pre > code`) */
 .markdown pre code {
   background: none;
   padding: 0;
@@ -66,7 +66,7 @@
   display: block;
 }
 
-/* ✅ 블록 인용 스타일 */
+/* 블록 인용 스타일 */
 .markdown blockquote {
   margin: 10px 0;
   padding: 8px 16px;
@@ -77,10 +77,80 @@
 }
 
 .markdown img {
-  max-width: 80%;  /* 부모 컨테이너 기준으로 최대 크기 조정 */
-  height: auto;      /* 비율 유지 */
-  display: block;    /* 인라인 속성 제거 */
+  max-width: 80%; /* 부모 컨테이너 기준으로 최대 크기 조정 */
+  height: auto; /* 비율 유지 */
+  display: block; /* 인라인 속성 제거 */
   margin: 20px auto; /* 가운데 정렬 */
   border-radius: 5px; /* 둥근 테두리 */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// tablet
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 1024px) {
+  .markdown {
+  }
+
+  .markdown h1 {
+  }
+
+  .markdown h2 {
+  }
+
+  .markdown ul {
+  }
+
+  .markdown ol {
+  }
+
+  .markdown pre {
+  }
+
+  .markdown code {
+  }
+
+  .markdown pre code {
+  }
+
+  .markdown blockquote {
+  }
+
+  .markdown img {
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////////
+// mobile
+////////////////////////////////////////////////////////////////////////////////
+@media screen and (max-width: 768px) {
+  .markdown {
+  }
+
+  .markdown h1 {
+  }
+
+  .markdown h2 {
+  }
+
+  .markdown ul {
+  }
+
+  .markdown ol {
+  }
+
+  .markdown pre {
+  }
+
+  .markdown code {
+  }
+
+  .markdown pre code {
+  }
+
+  .markdown blockquote {
+  }
+
+  .markdown img {
+  }
 }
