--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,7 @@
   height: 100vh;
   text-align: center;
   color: #d4d4d4;
+  overflow-y: auto;
   font-family: "JetBrains Mono", "Fira Code", "Consolas", "Menlo", "monospace";
 }
 
@@ -14,13 +15,13 @@
   margin-bottom: 30px;
 
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bold;
     color: #e06c75;
   }
 
   p {
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: #aeb2b8;
     margin-top: 5px;
   }
@@ -34,7 +35,7 @@
   margin-bottom: 30px;
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     color: #d19a66;
     border-bottom: 2px solid #3a3f4b;
     padding-bottom: 5px;
@@ -46,7 +47,7 @@
     padding: 0;
 
     li {
-      font-size: 0.75rem;
+      font-size: 0.9rem;
       margin: 5px 0;
       color: #aeb2b8;
       display: flex;
@@ -114,20 +115,26 @@
 
   .intro {
     h1 {
+      font-size: 1.5rem;
     }
 
     p {
+      font-size: 0.7rem;
     }
   }
 
   .section {
 
     h2 {
+      font-size: 1rem;
     }
 
     ul {
 
       li {
+        font-size: 0.6rem;
+        margin: 3px 0;
+        gap: 3px;
 
         strong {
         }
@@ -136,5 +143,9 @@
   }
 
   .icon {
+    padding: 1px;
+    transition: background 0.3s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 3px;
   }
 }
