--- a/src/components/CategoryView/CategoryTree/CategoryTree.module.scss
+++ b/src/components/CategoryView/CategoryTree/CategoryTree.module.scss
@@ -1,13 +1,13 @@
 .arrow {
-  width: 13px;
+  width: 20px;
   display: inline-block;
   text-align: center;
   color: #ccc;
 }
 
 .folderIcon {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   display: flex;
   vertical-align: middle;
   padding-right: 1.5px;
@@ -23,8 +23,8 @@
   top: -2px;
 
   svg {
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
   }
 }
 
@@ -77,15 +77,19 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .arrow {
+    width: 13px;
   }
 
   .folderIcon {
+    width: 13px;
+    height: 13px;
   }
 
   .fileIcon {
 
     svg {
-
+      width: 13px;
+      height: 13px
     }
   }
 
