--- a/src/components/CategoryView/CategoryView.module.scss
+++ b/src/components/CategoryView/CategoryView.module.scss
@@ -1,11 +1,11 @@
 /* 카테고리 영역 */
 .categoryView {
-  width: 20%;
-  min-width: 200px;
-  max-width: 250px;
+  width: 30%;
+  min-width: 250px;
+  max-width: 350px;
   flex-shrink: 0;
   background-color: #323232;
-  font-size: 0.9rem;
+  font-size: 1.05rem;
   overflow-y: auto;
   padding: 10px;
   color: #fff;
@@ -74,6 +74,14 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .categoryView {
+    width: 20%;
+    min-width: 150px;
+    max-width: 200px;
+    font-size: 0.75rem;
+    padding: 10px;
+    color: #fff;
+    height: 100%;
+    border-right: 1px solid #000;
   }
 
   .categoryTree {
