--- a/src/components/NavigationView/NavigationView.module.scss
+++ b/src/components/NavigationView/NavigationView.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  width: 50px;
+  width: 60px;
   background-color: #323232;
   align-items: center;
   justify-content: flex-start;
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 7px;
 }
 
 /* 개별 버튼 스타일 */
@@ -42,8 +42,8 @@
 
   /* SVG 크기 조절 */
   svg {
-    width: 18px;
-    height: 18px;
+    width: 30px;
+    height: 30px;
   }
 }
 
@@ -76,12 +76,16 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .navigationView {
+    width: 35px;
+    padding: 5px 5px;
   }
 
   .navigation {
+    gap: 2px;
   }
 
   .navButton {
+    padding: 1px;
 
     &:hover {
     }
@@ -89,7 +93,10 @@
     &.active {
     }
 
+    /* SVG 크기 조절 */
     svg {
+      width: 18px;
+      height: 18px;
     }
   }
 }
