--- a/src/components/TableOfContents/TableOfContents.module.scss
+++ b/src/components/TableOfContents/TableOfContents.module.scss
@@ -16,8 +16,8 @@
   position: fixed;
   top: 10px;
   right: 10px;
-  width: 250px;
-  z-index: 1000;
+  width: 350px;
+  z-index: 100;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
 
@@ -36,8 +36,8 @@
   border-radius: 8px;
   backdrop-filter: blur(3px);
   color: #d4d4d4;
-  font-size: 12px;
-  max-height: 40vh;
+  font-size: 0.85rem;
+  height: 35vh;
   overflow-y: auto;
 }
 
@@ -73,11 +73,11 @@
 }
 
 .level2 {
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .level3 {
-  padding-left: 20px;
+  padding-left: 30px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -138,6 +138,7 @@
   }
 
   .tocWrapper {
+    width: 200px;
 
     &:hover {
     }
@@ -147,6 +148,8 @@
   }
 
   .tocBox {
+    font-size: 0.65rem;
+    height: 20vh;
   }
 
   .tocBox strong {
@@ -168,8 +171,10 @@
   }
 
   .level2 {
+    padding-left: 13px;
   }
 
   .level3 {
+    padding-left: 26px;
   }
 }
