--- a/src/components/NavigationView/NavigationView.module.scss
+++ b/src/components/NavigationView/NavigationView.module.scss
@@ -21,22 +21,18 @@
 
 /* 개별 버튼 스타일 */
 .navButton {
-  background: none;
-  border: none;
-  color: #a9b7c6;
-  font-size: 1rem;
-  cursor: pointer;
-  padding: 2px;
-  border-radius: 5px;
-  transition: background 0.4s, transform 0.4s;
+  color: #a9b7c6 !important;
+  padding: 2px !important;
+  border-radius: 5px !important;
+  transition: background 0.4s, transform 0.4s !important;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.1); // 마우스 오버 시 색상 강조
+    background-color: rgba(255, 255, 255, 0.1) !important;
     transform: scale(1.1);
   }
 
   &.active {
-    background-color: rgba(255, 255, 255, 0.2); // 열린 상태 유지
+    background-color: rgba(255, 255, 255, 0.2) !important;
     transform: scale(1.1);
   }
 
@@ -59,14 +55,10 @@
   }
 
   .navButton {
-
     &:hover {
     }
 
     &.active {
-    }
-
-    svg {
     }
   }
 }
@@ -85,7 +77,7 @@
   }
 
   .navButton {
-    padding: 1px;
+    padding: 1px !important;
 
     &:hover {
     }
