--- a/src/components/GoToHome/GoToHome.module.scss
+++ b/src/components/GoToHome/GoToHome.module.scss
@@ -1,18 +1,16 @@
 .goToHome {
   position: fixed;
-  right: 25px;
-  bottom: 50vh;
+  right: 25px !important;
+  bottom: 53.5vh !important;
   background: rgba(91, 91, 91, 0.7);
   color: white;
-  border: none;
-  padding: 5px 10px;
-  font-size: 25px;
-  border-radius: 50px;
+  padding: 2px 6px;
+  font-size: 20px;
+  border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-  opacity: 0.8;
-  z-index: 10000;
+  opacity: 1;
+  z-index: 100;
 
   &:hover {
     background: rgba(255, 255, 255, 0.9);
@@ -37,8 +35,8 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .goToHome {
+    bottom: 52.8vh !important;
     font-size: 15px;
-
     &:hover {
     }
   }
