--- a/src/components/ScrollToTop/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop/ScrollToTop.module.scss
@@ -1,34 +1,50 @@
 .scrollToTop {
   position: fixed;
-  right: 70px;
-  bottom: 50vh;
+  right: 25px !important;
+  bottom: 50vh !important;
   background: rgba(91, 91, 91, 0.7);
   color: white;
   border: none;
-  padding: 5px 10px;
-  font-size: 16px;
-  border-radius: 50%;
+  padding: 2px 7px;
+  font-size: 20px;
+  border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-  opacity: 0.8;
-  z-index: 10000;
+  opacity: 0;
+  z-index: 100;
+
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &.visible {
+    opacity: 0.8;
+    pointer-events: auto;
+  }
 
   &:hover {
     background: rgba(255, 255, 255, 0.9);
     color: black;
+    transform: translateY(-2px);
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.8;
+  }
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // tablet
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
   .scrollToTop {
-
-    &:hover {
-    }
   }
 }
 
@@ -37,8 +53,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 768px) {
   .scrollToTop {
-
-    &:hover {
-    }
+    font-size: 15px;
   }
 }
