--- a/src/styles/base/_init.scss
+++ b/src/styles/base/_init.scss
@@ -1,12 +1,20 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   background-color: hsl(var(--background));
   color: hsl(var(--zinc-700));
   font-family: "Pretendard Variable", sans-serif;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  position: relative;
+  overflow-y: auto;
 }
 
 main {
-  padding: 0rem 0rem 0rem;
+  padding: 0;
+  min-height: 100vh;
 }
