--- a/src/components/LogView/LogView.module.scss
+++ b/src/components/LogView/LogView.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 250px;
-  background-color: #ccc;
+  background-color: #444;
   position: fixed;
   bottom: 0;
   left: 60px;
@@ -20,29 +20,30 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+
+  .logView:hover & {
+    opacity: 1;
+  }
 }
 
 /* 닫기 버튼 */
 .closeButton {
   background: none;
   border: none;
-  color: white;
+  color: #cccccc;
   cursor: pointer;
-  font-size: 16px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
 // tablet
 ////////////////////////////////////////////////////////////////////////////////
 @media screen and (max-width: 1024px) {
-  .logView {
-  }
-
-  .logHeader {
-  }
-
-  .closeButton {
-  }
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -55,6 +56,7 @@
   }
 
   .logHeader {
+    opacity: 1;
   }
 
   .closeButton {
