--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -177,3 +177,14 @@
   .markdown img {
   }
 }
+
+.postAd {
+  margin: 3rem auto 1rem;
+  border-top: 1px solid #eaeaea;
+  padding-top: 2rem;
+
+  @media (max-width: 768px) {
+    margin: 2rem auto 1rem;
+    padding-top: 1rem;
+  }
+}
