--- a/src/app/post/[slug]/page.module.scss
+++ b/src/app/post/[slug]/page.module.scss
@@ -4,7 +4,7 @@
   max-width: 100%;
   padding: 13px 14px;
   color: #d4d4d4;
-  font-size: 1rem;
+  font-size: 0.8rem;
   line-height: 1.2;
   font-family: "JetBrains Mono", "Fira Code", "Consolas", "Menlo", "monospace";
   white-space: pre-wrap;
@@ -18,14 +18,17 @@
   color: #e06c75;
   border-bottom: 4px solid #3a3f4b;
   padding-bottom: 6px;
+  margin-bottom: 23px;
 }
 
 .markdown h2 {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: bold;
   color: #d19a66;
   border-bottom: 2px solid #3a3f4b;
   padding-bottom: 5px;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 /* 목록 스타일 */
